@@ -1,5 +1,7 @@
 Release CMTK-1.3.0:
 
+- API: moved morphological operators from cmtk::DataGrid into separate class,
+    cmtk::DataGridMorphologicalOperators.
 - API: prevent copying of system classes where this would lead to problems.
 - Added: filter, levelset, make_initial_affine, mrbias, and reformatx tools
     now support database updating.
